data/derived/fa15/progs/unify/prog0569.ml.out
Characters 79-81:
  wwhile (f',b);;
          ^^
Error: This expression has type 'a -> int
       but an expression was expected of type 'a -> 'a * bool
       Type int is not compatible with type 'a * bool 
